[package]
name = "surreal-rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
reqwest = "0.11.18"
serde = "1.0.171"
serde_json = "1.0.103"
tokio = { version="1.29.1", features=["full"]}
simplehttp = { path = "../simplehttp", features=["reqwest"], default-features=false }
surrealdb-http = { git = "https://github.com/flyaruu/surrealdb-http" }
http = "0.2.9"
